<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="title">My Nanodegree Apps!</string>
    <string name="btn1">SPOTIFY STREAMER</string>
    <string name="btn2">SCORES APP</string>
    <string name="btn3">LIBRARY APP</string>
    <string name="btn4">BUILD IT BIGGER</string>
    <string name="btn5">XYZ READER</string>
    <string name="btn6">CAPSTONE: MY OWN APP</string>
</resources>
