<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorBack"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.genesis.myappportfolio.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="30sp"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true" />

    <Button
        style="@style/btnStyle"
        android:id="@+id/btn1"
        android:layout_below="@id/tv"
        android:text="@string/btn1" />

    <Button
        style="@style/btnStyle"
        android:id="@+id/btn2"
        android:layout_below="@id/btn1"
        android:text="@string/btn2" />

    <Button
        style="@style/btnStyle"
        android:id="@+id/btn3"
        android:layout_below="@id/btn2"
        android:text="@string/btn3" />

    <Button
        style="@style/btnStyle"
        android:id="@+id/btn4"
        android:layout_below="@id/btn3"
        android:text="@string/btn4" />

    <Button
        style="@style/btnStyle"
        android:id="@+id/btn5"
        android:layout_below="@id/btn4"
        android:text="@string/btn5" />

    <Button
        style="@style/btnStyle"
        android:id="@+id/btn6"
        android:layout_below="@id/btn5"
        android:text="@string/btn6"
        android:textColor="#FFFFFF"
        android:background="#2E7D32"/>

</RelativeLayout>
